@@ -1,0 +1,10 @@
+#!/usr/bin/env perl
+
+use FindBin;
+use lib "$FindBin::Bin/lib";
+use lib "$FindBin::Bin/extlib/lib/perl5";
+
+use Gitprep;
+
+my $app = Gitprep->new;
+$app->manager->setup_database;
