@@ -8,6 +8,7 @@
   - remove [basic]encoding_suspects option
     and move this feature to project settings page.
   - setup.sh is renamed to setup_module
+  - separete database creating logic to setup_database script
   
 1.12 (7 Feb 2016)
   - Catch up latest Github design.
